--- a/minting-dapp-vue/package.json
+++ b/minting-dapp-vue/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@ethersproject/providers": "^5.7.0",
     "@metamask/detect-provider": "^1.2.0",
+    "@openzeppelin/merkle-tree": "^1.0.5",
     "@popperjs/core": "^2.11.6",
-    "@typechain/hardhat": "^6.1.2",
-    "@wagmi/core": "^1.3.1",
+    "@typechain/hardhat": "^8.0.2",
+    "@wagmi/core": "^1.3.8",
     "@walletconnect/modal": "^2.5.9",
     "@web3modal/ethereum": "^2.6.0",
     "@web3modal/html": "^2.6.0",
